# text-to-baby-talk

./: .gitignore  LICENSE  pyproject.toml  requirements.txt  setup.py
src/text_to_baby_talk_fedtti/: __main__.py  translator.py
text_to_baby_talk_fedtti/: __init__.py  translator.py
