[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "text_to_baby_talk_fedtti"
version = "0.0.1"
authors = [
  { name = "Federico Moretti", email = "hello@federicomoretti.it" },
]
description = ""
readme = "README.md"
requires-python = ""
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.9",
  "Operating System :: OS Independent",
]
license = "MIT"
license-files = "["LICEN[CS]E*"]"

[project.urls]
Homepage = "https://github.com/fedtti/text-to-baby-talk"
Issues = "https://github.com/fedtti/text-to-baby-talk/issues"
