[project]
name = "text-to-baby-talk-fedtti"
version = "0.1.0"
description = "..."
readme = "README.md"
authors = [
    { name = "Federico Moretti", email = "hello@federicomoretti.it" }
]
requires-python = ">=3.11"
dependencies = [
    "click",
]

[project.scripts]
text-to-baby-talk = "text_to_baby_talk_fedtti:main"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "text_to_baby_talk_fedtti"
module-root = ""
